--- a/index.html
+++ b/index.html
@@ -230,13 +230,13 @@
         <p class="copyright">&copy; 2024 Lucian Bistreanu</p>
         <div class="social-links">
             <a href="https://github.com/lucian-888" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
-                <img src="/images/github-icon.png" alt="GitHub" style="width: 24px; height: 24px;">
+                <img src="images/github-icon.png" alt="GitHub" style="width: 24px; height: 24px;">
             </a>
             <a href="https://www.facebook.com/lucian.bistreanu.photography" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
-                <img src="/images/facebook-icon.png" alt="Facebook" style="width: 24px; height: 24px;">
+                <img src="images/facebook-icon.png" alt="Facebook" style="width: 24px; height: 24px;">
             </a>
             <a href="https://www.linkedin.com/in/lucian-bistreanu-b879a41/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
-                <img src="/images/linkedin-icon.png" alt="LinkedIn" style="width: 24px; height: 24px;">
+                <img src="images/linkedin-icon.png" alt="LinkedIn" style="width: 24px; height: 24px;">
             </a>
         </div>
     </div>
