--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <section id="contact" class="lang-fr">
         <h2>Contact</h2>
-        <form id="contact-form">
+        <form class="contact-form">
             <label for="nom">Nom:</label>
             <input type="text" id="nom" name="user_name" autocomplete="name" required>
 
@@ -209,15 +209,15 @@
 
     <section id="contact-en" class="lang-en" style="display: none;">
         <h2>Contact</h2>
-        <form id="contact-form">
-            <label for="nom">Name:</label>
+        <form class="contact-form">
+            <label for="nom-en">Name:</label>
             <input type="text" id="nom" name="user_name" autocomplete="name" required>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="user_email" autocomplete="email" required>
+            <label for="email-en">Email:</label>
+            <input type="email" id="email-en" name="user_email" autocomplete="email" required>
 
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" autocomplete="off" required></textarea>
+            <label for="message-en">Message:</label>
+            <textarea id="message-en" name="message" autocomplete="off" required></textarea>
 
             <button type="submit">Send</button>
         </form>
