differentiating the email form-fr and form-en

--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
 
     <section id="contact" class="lang-fr">
         <h2>Contact</h2>
-        <form class="contact-form">
-            <label for="nom">Nom:</label>
-            <input type="text" id="nom" name="user_name" autocomplete="name" required>
+        <form id="contact-form-fr">
+            <label for="nom-fr">Nom:</label>
+            <input type="text" id="nom-fr" name="user_name" autocomplete="name" required>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="user_email" autocomplete="email" required>
+            <label for="email-fr">Email:</label>
+            <input type="email" id="email-fr" name="user_email" autocomplete="email" required>
 
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" autocomplete="off" required></textarea>
+            <label for="message-fr">Message:</label>
+            <textarea id="message-fr" name="message" autocomplete="off" required></textarea>
 
                 <button type="submit">Envoyer</button>
             </form>
@@ -209,9 +209,9 @@
 
     <section id="contact-en" class="lang-en" style="display: none;">
         <h2>Contact</h2>
-        <form class="contact-form">
+        <form id="contact-form-en">
             <label for="nom-en">Name:</label>
-            <input type="text" id="nom" name="user_name" autocomplete="name" required>
+            <input type="text" id="nom-en" name="user_name" autocomplete="name" required>
 
             <label for="email-en">Email:</label>
             <input type="email" id="email-en" name="user_email" autocomplete="email" required>
