adding more content to about and projects sections

--- a/index.html
+++ b/index.html
@@ -32,9 +32,22 @@
         <!-- French Version -->
         <section id="apropos" class="lang-fr">
             <h2>À propos</h2>
-            <p>Développeur web passionné avec expérience en HTML, CSS, JavaScript et React. Mon parcours vers le développement web est enrichi par mes expériences en tant qu'avocat, photographe et artiste peintre. Ces antécédents divers m'ont doté de compétences uniques qui améliorent mon approche dans la création de sites web modernes et réactifs. <br><br>
-            En tant qu'ancien avocat, j'ai développé de fortes capacités d'analyse et une attention aux détails, qui m'aident à écrire un code propre et efficace tout en assurant la conformité aux normes d'accessibilité. Mon expérience de photographe a aiguisé mon sens du design, me permettant de créer des interfaces visuellement attrayantes et conviviales. <br><br>
-            De plus, mon parcours artistique inspire la créativité dans mes projets, me permettant de penser de manière innovante lors du développement de solutions. J'aime créer des expériences utilisateur exceptionnelles qui allient fonctionnalité et esthétique, et je suis toujours enthousiaste à l'idée de relever de nouveaux défis dans ce domaine en constante évolution qu'est le développement web.</p>
+                <p>Développeur web passionné avec expérience en HTML, CSS, JavaScript et React. Mon parcours 
+                   vers le développement web est enrichi par mes expériences en tant qu'avocat, photographe et artiste 
+                   peintre. Ces antécédents divers m'ont doté de compétences uniques qui améliorent mon approche dans 
+                   la création de sites web modernes et réactifs. <br><br>
+                   En tant qu'ancien avocat, j'ai développé de fortes capacités d'analyse et une attention aux détails, 
+                   qui m'aident à écrire un code propre et efficace tout en assurant la conformité aux normes d'accessibilité. 
+                   Mon expérience de photographe a aiguisé mon sens du design, me permettant de créer des interfaces visuellement 
+                   attrayantes et conviviales. <br><br>
+                   De plus, mon parcours artistique inspire la créativité dans mes projets, me permettant de penser de manière 
+                   innovante lors du développement de solutions. J'aime créer des expériences utilisateur exceptionnelles qui 
+                   allient fonctionnalité et esthétique, et je suis toujours enthousiaste à l'idée de relever de nouveaux défis 
+                   dans ce domaine en constante évolution qu'est le développement web.<br><br>
+                   J'ai suivi une formation en développement web full stack chez OpenClassrooms. Ce programme m'a permis d'acquérir 
+                   des compétences en HTML, CSS, JavaScript et bases de données à travers des projets pratiques. J'ai également appris 
+                   à utiliser des méthodes agiles et à gérer des projets, me préparant ainsi à travailler efficacement dans des environnements collaboratifs.
+                </p>
         </section>
 
         <section id="competences" class="lang-fr">
@@ -83,6 +96,13 @@
                     <h3>Agence de Voyage</h3>
                     <p>Description : Création d'une page d'accueil responsive pour une agence de voyage.</p>
                     <p>Défis : Mise en place d'un design adaptatif pour tous les appareils.</p>
+                    <p>Technologie : La page a été développée en 
+                       utilisant HTML5 pour la structure du contenu et CSS3 pour le style et la mise en page. 
+                       Nous avons principalement utilisé Flexbox pour créer une disposition flexible et adaptative. 
+                       Cette approche nous a permis de concevoir une interface qui s'ajuste automatiquement à 
+                       différentes tailles d'écran, assurant ainsi une expérience utilisateur optimale sur desktop, 
+                       tablette et mobile, sans recourir à des frameworks externes.
+                    </p>
                     <a href="https://github.com/lucian-888/Projet_2.git" target="_blank">lien GitHub</a><br>
                     <a href="https://lucian-888.github.io/Projet_2/" target="_blank">Voir le projet</a>
                 </div>
@@ -91,6 +111,14 @@
                     <h3>Page Web Dynamique</h3>
                     <p>Description : Développement d'une page web interactive avec JavaScript.</p>
                     <p>Défis : Gestion des événements et manipulation du DOM.</p>
+                    <p>Technologie : La page a été développée en utilisant JavaScript pour gérer 
+                       les interactions utilisateur et manipuler dynamiquement le DOM. Des méthodes comme 
+                       getElementById() et getElementsByClassName() ont été utilisées pour sélectionner des éléments spécifiques.
+                       Ces sélecteurs, combinés à l'utilisation d'addEventListener() pour la gestion des événements, ont permis 
+                       de créer une interface interactive et réactive. Des fonctions asynchrones ont également été implémentées 
+                       pour gérer efficacement les requêtes de données, assurant une expérience utilisateur fluide sans bloquer 
+                       l'exécution du script principal.
+                    </p>
                     <a href="https://github.com/lucian-888/Projet3.git" target="_blank">lien GitHub</a>
                 </div>
 
@@ -98,6 +126,14 @@
                     <h3>Kasa</h3>
                     <p>Description : Application web de location immobilière avec React.</p>
                     <p>Défis : Comment gérer efficacement le routage dans une application web moderne.</p>
+                    <p>Technologie : L'application web de location immobilière a été développée en utilisant 
+                       React pour la création de l'interface utilisateur et React Router pour gérer le routage. 
+                       Nous avons implémenté un système de routage déclaratif en utilisant les composants BrowserRouter, 
+                       Routes, et Route de react-router-dom. Le routage a été configuré de manière à permettre une 
+                       navigation fluide entre les différentes pages de l'application, comme la page d'accueil, les 
+                       listings de propriétés, et les pages de détails. Des routes paramétrées ont été utilisées pour 
+                       afficher dynamiquement les informations spécifiques à chaque propriété.
+                    </p>
                     <a href="https://github.com/lucian-888/Projet_5_v_2.git" target="_blank">lien GitHub</a>
                 </div>
 
@@ -105,6 +141,13 @@
                     <h3>Mon Vieux Grimoire</h3>
                     <p>Description : Développement du back-end d'un site de notation de livres.</p>
                     <p>Défis : Creation d'un serveur avec Express et connection à une base de données MongoDB.</p>
+                    <p>Technologie : Le back-end du site a été développé en utilisant Node.js avec le framework Express 
+                       pour créer le serveur. Nous avons configuré les routes principales en utilisant le système de routage 
+                       d'Express. Pour la connexion à la base de données MongoDB, nous avons utilisé Mongoose. La connexion 
+                       a été établie avec une fonction asynchrone. Des schémas Mongoose ont été créés pour structurer les 
+                       données des livres et des utilisateurs, permettant une interaction fluide avec la base de données. 
+                       L'architecture MVC (Modèle-Vue-Contrôleur) a été adoptée pour organiser le code de manière modulaire et maintenable.
+                    </p>
                     <a href="https://github.com/lucian-888/Projet_6_v_2.git" target="_blank">lien GitHub</a>
                 </div>
             </div>
@@ -129,9 +172,16 @@
         <!-- English Version -->
         <section id="apropos-en" class="lang-en" style="display: none;">
             <h2>About</h2>
-            <p>A passionate web developer with background in HTML, CSS, JavaScript, and React. My journey into web development is enriched by my experiences as a lawyer, photographer, and artist painter. These diverse backgrounds have equipped me with unique skills that enhance my approach to creating modern and responsive websites. <br><br>
-                As a former lawyer, I developed strong analytical skills and attention to detail, which help me write clean and efficient code while ensuring compliance with accessibility standards. My experience as a photographer has sharpened my eye for design, allowing me to create visually appealing and user-friendly interfaces. <br><br>
-                Additionally, my artistic background inspires creativity in my projects, enabling me to think outside the box when developing innovative solutions. I enjoy crafting exceptional user experiences that blend functionality with aesthetics, and I'm always eager to take on new challenges in this ever-evolving field of web development.</p>
+            <p>A passionate web developer with background in HTML, CSS, JavaScript, and React. My journey into web development 
+               is enriched by my experiences as a lawyer, photographer, and artist painter. These diverse backgrounds have equipped 
+               me with unique skills that enhance my approach to creating modern and responsive websites. <br><br>
+               As a former lawyer, I developed strong analytical skills and attention to detail, which help me write clean and efficient 
+               code while ensuring compliance with accessibility standards. My experience as a photographer has sharpened my eye for design, 
+               allowing me to create visually appealing and user-friendly interfaces. <br><br>
+               Additionally, my artistic background inspires creativity in my projects, enabling me to think outside the box when developing 
+               innovative solutions. I enjoy crafting exceptional user experiences that blend functionality with aesthetics, and I'm always eager 
+               to take on new challenges in this ever-evolving field of web development.
+            </p>
         </section>
 
         <section id="competences-en" class="lang-en" style="display: none;">
@@ -179,6 +229,12 @@
                     <h3>Travel Agency</h3>
                     <p>Description: Creation of a responsive homepage for a travel agency.</p>
                     <p>Challenges: Implementation of an adaptive design for all devices.</p>
+                    <p>Technology: The page was developed using HTML5 for content structure and 
+                       CSS3 for styling and layout. We primarily utilized Flexbox to create a flexible and adaptive 
+                       layout. This approach allowed us to design an interface that automatically adjusts to different 
+                       screen sizes, ensuring an optimal user experience on desktop, tablet, and mobile devices, without 
+                       relying on external frameworks.
+                    </p>
                     <a href="https://github.com/lucian-888/Projet_2.git" target="_blank">GitHub link</a><br>
                     <a href="https://lucian-888.github.io/Projet_2/" target="_blank">View project</a>
                 </div>
@@ -187,6 +243,13 @@
                     <h3>Dynamic Web Page</h3>
                     <p>Description: Development of an interactive web page with JavaScript.</p>
                     <p>Challenges: Event handling and DOM manipulation.</p>
+                    <p>Technology: The page was developed using JavaScript to handle user interactions and 
+                       dynamically manipulate the DOM. Methods such as getElementById() and getElementsByClassName() 
+                       were used to select specific elements. These selectors, combined with the use of addEventListener() 
+                       for event handling, allowed us to create an interactive and responsive interface. Asynchronous 
+                       functions were also implemented to efficiently manage data requests, ensuring a smooth user 
+                       experience without blocking the execution of the main script.
+                    </p>
                     <a href="https://github.com/lucian-888/Projet3.git" target="_blank">GitHub link</a>
                 </div>
 
@@ -194,6 +257,13 @@
                     <h3>Kasa</h3>
                     <p>Description : Real Estate Rental Web Application with React.</p>
                     <p>Challenges : How to Effectively Manage Routing in a Modern Web Application.</p>
+                    <p>Technology: The real estate rental web application was developed using React for creating 
+                       the user interface and React Router for managing routing. We implemented a declarative routing 
+                       system using the BrowserRouter, Routes, and Route components from react-router-dom. The routing 
+                       was configured to allow smooth navigation between different pages of the application, such as the 
+                       home page, property listings, and detail pages. Parameterized routes were used to dynamically display 
+                       information specific to each property. 
+                    </p>
                     <a href="https://github.com/lucian-888/Projet_5_v_2.git" target="_blank">GitHub link</a>
                 </div>
 
@@ -201,6 +271,13 @@
                     <h3>My Old Grimoire</h3>
                     <p>Description : Development of the Backend for a Book Rating Website.</p>
                     <p>Challenges : Creating a Server with Express and Connecting to a MongoDB Database.</p>
+                    <p>Technology: The back-end of the site was developed using Node.js with the Express framework 
+                       to create the server. We configured the main routes using Express's routing system. For the 
+                       connection to the MongoDB database, we used Mongoose. The connection was established using an 
+                       asynchronous function. Mongoose schemas were created to structure the data for books and users, 
+                       allowing for smooth interaction with the database. The MVC (Model-View-Controller) architecture was 
+                       adopted to organize the code in a modular and maintainable manner.
+                    </p>
                     <a href="https://github.com/lucian-888/Projet_6_v_2.git" target="_blank">GitHub link</a>
                 </div>
             </div>
