adding content to the english version

--- a/index.html
+++ b/index.html
@@ -180,7 +180,10 @@
                allowing me to create visually appealing and user-friendly interfaces. <br><br>
                Additionally, my artistic background inspires creativity in my projects, enabling me to think outside the box when developing 
                innovative solutions. I enjoy crafting exceptional user experiences that blend functionality with aesthetics, and I'm always eager 
-               to take on new challenges in this ever-evolving field of web development.
+               to take on new challenges in this ever-evolving field of web development.<br><br>
+               I completed a full stack web development training program at OpenClassrooms. This program allowed me to acquire skills in HTML, 
+               CSS, JavaScript, and databases through practical projects. I also learned to use agile methods and manage projects, thus preparing 
+               me to work effectively in collaborative environments.
             </p>
         </section>
 
